# anytype-sdk

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  build_local.sh  pyproject.toml  requirements.txt  setup.py
anytype/: __init__.py  client.py  db.py  exceptions.py  models.py  orm.py  simple.py  utils.py
anytype/api/: __init__.py  auth.py  lists.py  members.py  objects.py  properties.py  search.py  spaces.py  tags.py  templates.py  types.py
examples/: quickstart.py
tests/: test_client.py
